// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableBody Style tests should render with default styles 1`] = `
.circuit-4 {
  vertical-align: middle;
}

tbody .circuit-4:last-child th,
tbody .circuit-4:last-child td {
  border-bottom: none;
}

.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #E6E6E6;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
}

<tbody>
  <tr
    class="circuit-4 circuit-5"
    data-testid="table-row"
  >
    <td
      class="circuit-0 circuit-1"
      data-testid="table-cell"
    >
      Foo
    </td>
    <td
      class="circuit-0 circuit-1"
      data-testid="table-cell"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody Style tests should render with fixed header styles 1`] = `
.circuit-6 {
  vertical-align: middle;
}

tbody .circuit-6:last-child th,
tbody .circuit-6:last-child td {
  border-bottom: none;
}

.circuit-4 {
  background-color: #FFF;
  border-bottom: 1px solid #E6E6E6;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
}

.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #E6E6E6;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out,color 120ms ease-in-out;
  white-space: nowrap;
}

@media (max-width:767px) {
  .circuit-0 {
    left: 0;
    top: auto;
    position: absolute;
    width: 145px;
    white-space: unset;
  }
}

.circuit-2 {
  background-color: #FFF;
  border-bottom: 1px solid #E6E6E6;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  display: none;
}

@media (max-width:767px) {
  .circuit-2 {
    display: table-cell;
    min-width: 145px;
    white-space: unset;
    width: 145px;
  }
}

<tbody>
  <tr
    class="circuit-6 circuit-7"
    data-testid="table-row"
  >
    <th
      class="circuit-0 circuit-1"
      data-testid="table-header"
    >
      Foo
    </th>
    <td
      aria-hidden="true"
      class="circuit-2 circuit-3"
      data-testid="table-cell"
      role="presentation"
    >
      Foo
    </td>
    <td
      class="circuit-4 circuit-3"
      data-testid="table-cell"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody logic tests sortHover should not render a cell with hovered styles if its column is not currently hovered 1`] = `
.circuit-4 {
  vertical-align: middle;
}

tbody .circuit-4:last-child th,
tbody .circuit-4:last-child td {
  border-bottom: none;
}

.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #E6E6E6;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
}

<tbody>
  <tr
    class="circuit-4 circuit-5"
    data-testid="table-row"
  >
    <td
      class="circuit-0 circuit-1"
      data-testid="table-cell"
    >
      Foo
    </td>
    <td
      class="circuit-0 circuit-1"
      data-testid="table-cell"
    >
      Bar
    </td>
  </tr>
</tbody>
`;

exports[`TableBody logic tests sortHover should render a cell with hovered styles if its column is currently hovered 1`] = `
.circuit-4 {
  vertical-align: middle;
}

tbody .circuit-4:last-child th,
tbody .circuit-4:last-child td {
  border-bottom: none;
}

.circuit-2 {
  background-color: #FFF;
  border-bottom: 1px solid #E6E6E6;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
}

.circuit-0 {
  background-color: #FFF;
  border-bottom: 1px solid #E6E6E6;
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  background-color: #FAFBFC;
}

<tbody>
  <tr
    class="circuit-4 circuit-5"
    data-testid="table-row"
  >
    <td
      class="circuit-0 circuit-1"
      data-testid="table-cell"
    >
      Foo
    </td>
    <td
      class="circuit-2 circuit-1"
      data-testid="table-cell"
    >
      Bar
    </td>
  </tr>
</tbody>
`;
